name:                strongly-typed-bound
version:             0.1.0.0
license:             PublicDomain
author:              Samuel Gélineau
maintainer:          gelisam+github@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     StronglyTypedBound
  other-extensions:    GADTs, KindSignatures, InstanceSigs, RankNTypes, ScopedTypeVariables, TypeOperators
  build-depends:       base >=4.7 && <4.8
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -W -Wall
